--- a/samples/basic/index.html
+++ b/samples/basic/index.html
@@ -5,10 +5,6 @@
 <script type="text/javascript" src="../../extras/jquery.min.1.7.js"></script>
 <script type="text/javascript" src="../../extras/modernizr.2.5.3.min.js"></script>
 
-<!-- turn.js files -->
-
-<script type="text/javascript" src="../../lib/turn.js"></script>
-
 <!-- Sample files -->
 
 <script type="text/javascript" src="js/basic.js"></script>
@@ -40,6 +36,7 @@
 
 <script type="text/javascript">
 
+function loadApp() {
 	// Flipbook
 
 	$('.flipbook').turn({
@@ -62,13 +59,16 @@
 			autoCenter: true
 
 	});
+}
 
-	// Load the HTML4 version if there's not CSS transform
+// Load the HTML4 version if there's not CSS transform
 
-	yepnope({
-		test : Modernizr.csstransforms,
-		nope: ['../../lib/turn.html4.min.js']
-	});
+yepnope({
+	test : Modernizr.csstransforms,
+	yep: ['../../lib/turn.min.js'],
+	nope: ['../../lib/turn.html4.min.js'],
+	complete: loadApp
+});
 
 </script>
 
