--- a/samples/basic/index.html
+++ b/samples/basic/index.html
@@ -4,13 +4,6 @@
 <meta name="viewport" content="width = 1050, user-scalable = no" />
 <script type="text/javascript" src="../../extras/jquery.min.1.7.js"></script>
 <script type="text/javascript" src="../../extras/modernizr.2.5.3.min.js"></script>
-
-<!-- Sample files -->
-
-<script type="text/javascript" src="js/basic.js"></script>
-
-<link type="text/css" rel="stylesheet" href="css/basic.css"></link>
-
 </head>
 <body>
 
@@ -67,6 +60,7 @@ yepnope({
 	test : Modernizr.csstransforms,
 	yep: ['../../lib/turn.min.js'],
 	nope: ['../../lib/turn.html4.min.js'],
+	both: ['js/basic.js', 'css/basic.css'],
 	complete: loadApp
 });
 
