--- a/samples/steve-jobs/index.html
+++ b/samples/steve-jobs/index.html
@@ -7,9 +7,7 @@
 <script type="text/javascript" src="../../extras/jquery.mousewheel.min.js"></script>
 <script type="text/javascript" src="../../extras/modernizr.2.5.3.min.js"></script>
 
-
 <script type="text/javascript" src="../../lib/hash.js"></script>
-
 </head>
 <body>
 
@@ -253,8 +251,9 @@ function loadApp() {
 
 	yepnope({
 		test : Modernizr.csstransforms,
-		yep: : ['../../lib/turn.js', 'css/jquery.ui.css', 'css/steve-jobs.css'],
+		yep: ['../../lib/turn.js', 'css/jquery.ui.css', 'css/steve-jobs.css'],
 		nope: ['../../lib/turn.html4.min.js', 'css/jquery.ui.html4.css', 'css/steve-jobs-html4.css'],
+		both: ['js/steve-jobs.js'],
 		complete: loadApp
 	});
 
