--- a/samples/basic/index.html
+++ b/samples/basic/index.html
@@ -1,5 +1,9 @@
 <!doctype html>
-<html lang="en">
+<!--[if lt IE 7 ]> <html lang="en" class="ie6"> <![endif]-->
+<!--[if IE 7 ]>    <html lang="en" class="ie7"> <![endif]-->
+<!--[if IE 8 ]>    <html lang="en" class="ie8"> <![endif]-->
+<!--[if IE 9 ]>    <html lang="en" class="ie9"> <![endif]-->
+<!--[if !IE]><!--> <html lang="en"> <!--<![endif]-->
 <head>
 <meta name="viewport" content="width = 1050, user-scalable = no" />
 <script type="text/javascript" src="../../extras/jquery.min.1.7.js"></script>
@@ -52,11 +56,7 @@ function loadApp() {
 			
 			// Auto center this flipbook
 
-			autoCenter: true,
-
-			display: 'single',
-
-			page: 12
+			autoCenter: true
 
 	});
 }
