--- a/samples/steve-jobs/index.html
+++ b/samples/steve-jobs/index.html
@@ -1,5 +1,9 @@
 <!doctype html>
-<html lang="en">
+<!--[if lt IE 7 ]> <html lang="en" class="ie6"> <![endif]-->
+<!--[if IE 7 ]>    <html lang="en" class="ie7"> <![endif]-->
+<!--[if IE 8 ]>    <html lang="en" class="ie8"> <![endif]-->
+<!--[if IE 9 ]>    <html lang="en" class="ie9"> <![endif]-->
+<!--[if !IE]><!--> <html lang="en"> <!--<![endif]-->
 <head>
 <script type="text/javascript" src="../../extras/jquery.min.1.7.js"></script>
 <script type="text/javascript" src="../../extras/jquery-ui-1.8.20.custom.min.js"></script>
@@ -250,8 +254,9 @@ function loadApp() {
 
 			missing: function (e, pages) {
 
-				for (var i = 0; i < pages.length; i++)
+				for (var i = 0; i < pages.length; i++) {
 					addPage(pages[i], $(this));
+				}
 
 			}
 		}
