--- a/samples/steve-jobs/index.html
+++ b/samples/steve-jobs/index.html
@@ -3,7 +3,6 @@
 <head>
 <script type="text/javascript" src="../../extras/jquery.min.js"></script>
 <script type="text/javascript" src="../../extras/jquery-ui.min.js"></script>
-<script type="text/javascript" src="../../extras/jquery.mousewheel.min.js"></script>
 <script type="text/javascript" src="../../lib/hash.js"></script>
 <script type="text/javascript" src="../../lib/turn.min.js"></script>
 <script type="text/javascript" src="js/steve-jobs.js"></script>
@@ -44,8 +43,9 @@ function loadApp() {
 
 	// Mousewheel
 
-	$('#book-zoom').mousewheel(function(event) {
-
+	$('#book-zoom').on('wheel', function(event) {
+	    event = event.originalEvent;
+		
 		var data = $(this).data(),
 			flipbook = $('.sj-book'),
 			view = flipbook.turn('view', page).filter( (page) => page != 0 ),
