--- a/samples/basic/index.html
+++ b/samples/basic/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta name="viewport" content="width = 1050, user-scalable = no" />
 <script type="text/javascript" src="../../extras/jquery.min.js"></script>
-<script type="text/javascript" src="../../lib/turn.min.js"></script>
+<script type="text/javascript" src="../../lib/turn5.min.js"></script>
 <link rel="stylesheet" href="css/basic.css">
 </head>
 <body>
@@ -34,7 +34,7 @@ function loadApp() {
 
 	// Create the flipbook
 
-	$('.flipbook').turn({
+	turn = new TurnJS('.flipbook',{
 			// Width
 
 			width:922,
